Created page with "<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!                 Also, no line break after the page title!  --> {{GSoCIdea |Dyn..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FDynamic_documentation_type_generation.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FDynamic_documentation_type_generation.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Dynamic documentation type generation|year=2012|
+{{GSoCIdea
+|Dynamic documentation type generation|
 <!-- Description goes here: --> 
 The official gentoo documentation is currently offered through a self-maintained XML format, called GuideXML. Although XML is considered a powerful language for generating other types, we are currently limiting ourselves to HTML output only. We have frequent requests for PDF and, more recently, ePub.
 
@@ -13,5 +14,3 @@ The purpose would be to update our infrastructure to generate multiple output fo
 * XML
 * Django CMS
 }}
-
-[[Category:GSoC 2012 Ideas]]
