--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FSELinux_policy_originator.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FSELinux_policy_originator.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|SELinux policy originator|year=2012|
+{{GSoCIdea
+|SELinux policy originator|
 <!-- Description goes here: --> 
 Gentoo Hardened is maturing its SELinux support rapidly. In SELinux, policies are written in a higher abstract format (dictated by the reference policy) and converted to the SELinux-specific rules (like allow, dontaudit, type transitions, etc.). For troubleshooting rights however, it is a very daunting task to find out why a particular rule is set (in other words, to find which higher level rule is causing the SELinux rule to exist).
 
@@ -19,5 +20,3 @@ In this idea, we would like to find a way to register where these lines come fro
 * M4
 * SELinux
 }}
-
-[[Category:GSoC 2012 Ideas]]
