--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FGentoo@home.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FGentoo@home.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Gentoo@home|year=2012|
+{{GSoCIdea
+|Gentoo@home|
 <!-- Description goes here: --> 
 Gentoo packages are stabilized and architecture tested (keyworded) following a request coming from a package maintainer or a Gentoo developer. The Gentoo architecture teams then test by hand every requested package and its dependencies. For a very large fraction of Gentoo packages, this tedious manual process could be batch automated given some specifications. The idea is to build a framework for such a project, that would help both users by getting much better stabilization process and maintainers by lightening the workflow and find critical bugs. One idea would be to use an automated built of a tinderbox, and distribute the tinderbox with stabilization scripts to the Gentoo user community to install and test packages automatically. It could be done via volunteer computing from the Gentoo user community. Since it could turn into an involved project, it could be split into three projects.
 |
@@ -14,5 +15,3 @@ Gentoo packages are stabilized and architecture tested (keyworded) following a r
 * distributed computing
 * virtualization
 }}
-
-[[Category:GSoC 2012 Ideas]]
