Created page with "<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!                 Also, no line break after the page title!  --> {{GSoCIdea |Rep..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FRepoman_cleanup.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FRepoman_cleanup.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Repoman cleanup|year=2012|
+{{GSoCIdea
+|Repoman cleanup|
 <!-- Description goes here: --> 
 Repoman (the Portage QA tool) could really use some attention. Before elaborating more on how to best solve this I need to check with zmedico.
 |
@@ -11,5 +12,3 @@ Repoman (the Portage QA tool) could really use some attention. Before elaboratin
 * python
 * bash
 }}
-
-[[Category:GSoC 2012 Ideas]]
