--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FCross_Container_Support.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FCross_Container_Support.mw
@@ -1,13 +1,14 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Cross Container Support|year=2012|
+{{GSoCIdea
+|Cross Container Support|
 <!-- Description goes here: --> 
 
-It is already possible to create fully working chroot using [http://www.gentoo.org/proj/en/base/embedded/handbook/?part{{=}}1&chap{{=}}5 qemu-user] and build quickly packages through it, the natural step further is to make it work as a normal container, providing a similar interface to manage it. This way build for arm targets can be done on faster systems and sidetracks also issues about python and perl not supporting proper cross compilation or widespread build systems such waf and cmake failing completely at the task.
+It is already possible to create fully working chroot using qemu-user and build quickly packages through it, the natural step further is to make it work as a normal container, providing a similar interface to manage it. This way build for arm targets can be done on faster systems and sidetracks also issues about python and perl not supporting proper cross compilation or widespread build systems such waf and cmake failing completely at the task.
 
 The project aims in providing initscripts, management tools and canned recipes to generate container-like chroot, let developers easily import and export system images and further integrate it with crossdev.
 
-An additional task is to support layered systems so native userspace can be used to further speed up the process (hybrid chroot).
+An additiona task is to support layered systems so native userspace can be used to further speed up the process (hybrid chroot).
 
 |
 <!-- List contacts: -->
@@ -16,7 +17,4 @@ An additional task is to support layered systems so native userspace can be used
 <!-- List required skills: -->
 * Knowledge of Qemu and lxc
 * Good knowledge of the runtime linker
-* Understanding of portage
-}}
-
-[[Category:GSoC 2012 Ideas]]
+* Understanding of portage}}
