Created page with "[http://gphoto.sourceforge.net/ '''gphoto'''] is a set of tools and libraries not just for retrieving images from cameras but also to upload and remote control the configuration ..."

--- a/GPhoto.mw
+++ b/GPhoto.mw
@@ -1,33 +1,7 @@
-{{Lowercase title}}
-
-{{InfoBox stack
-|{{InfoBox homepage|http://gphoto.sourceforge.net|header=true}}
-|{{InfoBox wikipedia}}
-}}
-
-'''''gPhoto''' is a set of software applications and libraries for use in digital photography. gPhoto supports not just retrieving of images from camera devices, but also upload and remote controlled configuration and capture, depending on whether the camera supports those features.'' - Wikipedia, the free encyclopedia
-
+[http://gphoto.sourceforge.net/ '''gphoto'''] is a set of tools and libraries not just for retrieving images from cameras but also to upload and remote control the configuration of your camera (if supported by the camera).
 == Installation ==
-
-gPhoto support can be enabled system-wide by setting the <var>USE</var> variable to <code>gphoto2</code>.
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="gphoto2"
-}}
-
-Enabling gPhoto support will pull in the {{Package|media-libs/libgphoto2}} package, which has the following USE flags:
-{{USEflag|package=media-libs/libgphoto2}}
-
-The system needs to be updated if the <var>USE</var> variable was set to <code>gphoto2</code>.
-{{Emerge
-|@world
-|params+=--changed-use --deep}}
-
-Install {{Package|media-gfx/gphoto2}} for a command-line interface to libgphoto2.
-{{Emerge|gphoto2}}
-
-== Usage ==
-
-To import images from a camera, plug it in, change to the image import directory, and run:
-{{Cmd|gphoto2 -p}}
-
-[[Category:Software]]
+Install Gphoto2
+{{Emerge|media-gfx/gphoto2}}
+== Getting started ==
+To import images from your camera plug your camera in, go to the directory you want to import the images and use gphoto:
+{{Cmd|gphoto2 -p }}
