Created page with "<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!                 Also, no line break after the page title!  --> {{GSoCIdea |Imp..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FImproved_binary_package_support.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FImproved_binary_package_support.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Improved binary package support|year=2012|
+{{GSoCIdea
+|Improved binary package support|
 <!-- Description goes here: --> 
 {{GSoCIdeaFromLastYear}}
 Gentoo better for derived binary distros. One of them is more intelligent handling of library versions with binpkgs (and installed packages, which are a form of binpkg). For example, it's possible to build a binpkg against an old version of a library, then install it against a new version and have it be broken by default because of a shared-library version bump. It's also possible to break reverse ABI dependencies when upgrading a package, and there is currently no convenient way for package managers to detect such breakage in advance. Ideally, a package would have a way to specify its ABI dependencies in the built state instead of just which versions it can build against from source. It is possible to create an ABI dependency abstraction that is flexible enough to cover all possible kinds of ABI dependencies. Using an ABI abstraction, it will not matter whether or not there exists a specific soname to be referenced by dependencies. See {{Bug|192319}}.
@@ -19,5 +20,3 @@ Two other minor problems:
 <!-- List required skills: -->
 * Python
 * Shell scripting}}
-
-[[Category:GSoC 2012 Ideas]]
