--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FCache_sync.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FCache_sync.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Cache sync|year=2012|
+{{GSoCIdea
+|Cache sync|
 <!-- Description goes here: --> 
 The portage tree and all its overlays keep growing. Right now only the official portage tree occupies more than 600Mb on a regular filesystem. However the package manager does not need the whole tree of full ebuilds, patches and manifests to perform most of its work. The idea would be to sync a smaller database or a cache of only needed information for global package manager operations, then fetch the required package only when needed. It would speed considerably tree synchronization and reduce the space occupied by portage tree (see the "Repository of Self-Contained Ebuild Source Packages" idea for an alternative approach). Currently the cache system in portage is also really slow and so is the search feature. The project could be inspired by the Debian or RPM system but with the usability and choices offered by Gentoo, and would probably include:
 
@@ -8,9 +9,6 @@ The portage tree and all its overlays keep growing. Right now only the official 
 * make portage/paludis/pkgcore to do delta-sync with a local cache and fetch only the required files to be installed when requested
 |
 <!-- List contacts: -->
-* [mailto:rafaelmartins@gentoo.org Rafael Martins] - Not sure if will mentor this idea, but feel free to contact.
 |
 <!-- List required skills: -->
 * Python (portage/pkgcore) or C++ (paludis)}}
-
-[[Category:GSoC 2012 Ideas]]
