Created page with "<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!                 Also, no line break after the page title!  --> {{GSoCIdea |Ope..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FOpenRC_Extensions.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FOpenRC_Extensions.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|OpenRC Extensions|year=2012|
+{{GSoCIdea
+|OpenRC Extensions|
 <!-- Description goes here: --> 
 
 OpenRC is the default init system in Gentoo, it provides a large deal of features while staying mostly agnostic to
@@ -9,19 +10,11 @@ the underlying implementation on /sbin/init.
 The project aims to be a constructive criticism to the systemd approach by providing the few interesting features
 not already implemented by OpenRC as stand alone modules allowing integrator not to need to bend their system layouts to accomodate the init system.
 
-Desired extensions include:
-* A mechanism by which init scripts can configure OpenRC to detect runtime failures, log them and respond to them. The key response we want to enable is to give regular init scripts respawn functionality like we have in /etc/inittab
-* Oom-killer protection via /proc/*/oom_adj
-* The ability to perform some sort of maintenance action on a timer (e.g. restart)
-
 |
 <!-- List contacts: -->
-* [mailto:lu_zero@gentoo.org Luca Barbato]
-* [mailto:ryao@cs.stonybrook.edu Richard Yao (secondary contact)]
+[mailto:lu_zero@gentoo.org Luca Barbato]
 |
 <!-- List required skills: -->
 * Knowledge of C, bash and sysvinit
 * Knowledge of systemd, upstart, launchd and similar systems
 * Understanding of the init process}}
-
-[[Category:GSoC 2012 Ideas]]
