--- a/Initramfs.mw
+++ b/Initramfs.mw
@@ -1,26 +1,5 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox wikipedia|Initrd|header=true}}
-|{{InfoBox guide|Initramfs}}
-}}
-An '''initramfs''' ('''init'''ial '''ram''' '''f'''ile '''s'''ystem) [[Article description::is used by Linux systems to prepare the system during boot before the operating systems' '''init''' process starts.]]
 
-The initramfs usually takes care of mounting important file systems (by loading the proper kernel modules and drivers) such as {{Path|/usr}} or {{Path|/var}}, preparing the {{Path|/dev}} file structure, etc. Users who use an encrypted file system will also have the initramfs ask them for the passphrase before it can mount the file systems. When the file systems are mounted, control is passed on to '''init''' which then takes care of further starting all necessary services and booting up the remainder of the system.
-
-== Available software and articles ==
-
-* {{See also|Custom Initramfs}} A guide to the self made "custom initramfs"
-* {{See also|Dracut}} Initramfs infrastructure, ported from the [https://fedoraproject.org/wiki/Dracut Fedora Project], that aims to have as little as possible hard-coded into the initramfs.
-* {{See also|Early Userspace Mounting}} Another worth to read article about custom initramfs
-* {{See also|Genkernel}}
-* [https://github.com/tokiclover/mkinitramfs-ll mkinitramfs-ll], [https://github.com/tokiclover/bar-overlay/tree/master/sys-kernel/mkinitramfs-ll sys-kernel/mkinitramfs-ll]
-* [[Old_Fashioned_Gentoo_Install#Making_the_initrd]]
-* [[Fbsplash#Creating_and_updating_an_initramfs_image|splash_geninitramfs]]
-
-== See also ==
-
-* {{See also|Initramfs/Guide|Gentoo Linux Initramfs Guide}}
-* [[Handbook:Parts/Installation/Kernel#Optional: Building an initramfs]]
-
-[[Category:Initramfs]]
-[[Category:Meta]]
+== Building an initramfs ==
+Several ways :
+* [[basic initramfs used to check and mount /usr|manually (gen_init_cpio and initramfs list method)]]
+* [[Dracut|sys-kernel/dracut]]
